fix: squished gifs

--- a/src/styles/Soullink.css
+++ b/src/styles/Soullink.css
@@ -289,7 +289,7 @@
 
 .gifPkmnImg {
   min-width: 120px;
-  min-height: 120px;
+  /* min-height: 120px; */
   max-width: 160px;
   max-height: 160px;
 }
@@ -306,7 +306,7 @@
 
 .gifPkmnImg-Preview {
   min-width: 60px;
-  min-height: 60px;
+  /* min-height: 60px; */
   max-width: 100px;
   max-height: 100px;
 }
